updated addchar.handlebars of all form information

--- a/views/addchar.handlebars
+++ b/views/addchar.handlebars
@@ -1,34 +1,309 @@
 <!--GENERIC FORM, EDIT TO OUR NEEDS-->
 
 <div class="row">
-    <form class="col s12">
-      <div class="row">
-        <div class="input-field col s6">
-          <input placeholder="Placeholder" id="first_name" type="text" class="validate">
-          <label for="first_name">First Name</label>
-        </div>
-        <div class="input-field col s6">
-          <input id="last_name" type="text" class="validate">
-          <label for="last_name">Last Name</label>
-        </div>
-      </div>
-      <div class="row">
-        <div class="input-field col s12">
-          <input disabled value="I am not editable" id="disabled" type="text" class="validate">
-          <label for="disabled">Disabled</label>
-        </div>
-      </div>
-      <div class="row">
-        <div class="input-field col s12">
-          <input id="password" type="password" class="validate">
-          <label for="password">Password</label>
-        </div>
-      </div>
-      <div class="row">
-        <div class="input-field col s12">
-          <input id="email" type="email" class="validate">
-          <label for="email">Email</label>
-        </div>
-      </div>
-    </form>
-  </div>
+  <form class="col s12">
+    <div class="input-field col s6">
+      <input type="text">
+      <label for="name">Name</label>
+    </div>
+</div>
+<div class="input-field col s6">
+  <input type="text">
+  <label for="class">Class</label>
+</div>
+</div>
+<div class="input-field col s6">
+  <input type="text">
+  <label for="level">Level</label>
+</div>
+</div>
+<div class="input-field col s6">
+  <input type="text">
+  <label for="background">Background</label>
+</div>
+</div>
+<div class="input-field col s6">
+  <input type="text">
+  <label for="player_name">Player_name</label>
+</div>
+</div>
+<div class="input-field col s6">
+  <input type="text">
+  <label for="faction">Faction</label>
+</div>
+</div>
+<div class="input-field col s6">
+  <input type="text">
+  <label for="race">Race</label>
+</div>
+</div>
+<div class="input-field col s6">
+  <input type="text">
+  <label for="alignment">Alignment</label>
+</div>
+</div>
+<div class="input-field col s6">
+  <input type="text">
+  <label for="exp">Exp</label>
+</div>
+</div>
+<div class="input-field col s6">
+  <input type="text">
+  <label for="inspiration">Inspiration</label>
+</div>
+</div>
+<div class="input-field col s6">
+  <input type="text">
+  <label for="strength">Strength</label>
+</div>
+</div>
+<div class="input-field col s6">
+  <input type="text">
+  <label for="dexterity">Dexterity</label>
+</div>
+</div>
+<div class="input-field col s6">
+  <input type="text">
+  <label for="constitution">Constitution</label>
+</div>
+</div>
+<div class="input-field col s6">
+  <input type="text">
+  <label for="intelligence">Intelligence</label>
+</div>
+</div>
+<div class="input-field col s6">
+  <input type="text">
+  <label for="wisdom">Wisdom</label>
+</div>
+</div>
+<div class="input-field col s6">
+  <input type="text">
+  <label for="charisma">Charisma</label>
+</div>
+</div>
+<div class="input-field col s6">
+  <input type="text">
+  <label for="strength_st">Strength_st</label>
+</div>
+</div>
+<div class="input-field col s6">
+  <input type="text">
+  <label for="dexterity_st">Dexterity_st</label>
+</div>
+</div>
+<div class="input-field col s6">
+  <input type="text">
+  <label for="constitution_st">Constitution_st</label>
+</div>
+</div>
+<div class="input-field col s6">
+  <input type="text">
+  <label for="intelligence_st">Intelligence_st</label>
+</div>
+</div>
+<div class="input-field col s6">
+  <input type="text">
+  <label for="wisdom_st">Wisdom_st</label>
+</div>
+</div>
+<div class="input-field col s6">
+  <input type="text">
+  <label for="charism_st">Charisma_st</label>
+</div>
+</div>
+<div class="input-field col s6">
+  <input type="text">
+  <label for="armor_class">Armor_class</label>
+</div>
+</div>
+<div class="input-field col s6">
+  <input type="text">
+  <label for="inititative">Inititative</label>
+</div>
+</div>
+<div class="input-field col s6">
+  <input type="text">
+  <label for="speed">Speed</label>
+</div>
+</div>
+<div class="input-field col s6">
+  <input type="text">
+  <label for="current_hp">Current_hp</label>
+</div>
+</div>
+<div class="input-field col s6">
+  <input type="text">
+  <label for="temp_hp">Temp_hp</label>
+</div>
+</div>
+<div class="input-field col s6">
+  <input type="text">
+  <label for="personality_traits">Personality_traits</label>
+</div>
+</div>
+<div class="input-field col s6">
+  <input type="text">
+  <label for="ideals">Ideals</label>
+</div>
+</div>
+<div class="input-field col s6">
+  <input type="text">
+  <label for="bonds">Bonds</label>
+</div>
+</div>
+<div class="input-field col s6">
+  <input type="text">
+  <label for="flaws">Flaws</label>
+</div>
+</div>
+<div class="input-field col s6">
+  <input type="text">
+  <label for="attacks_and_spellcasting">Attacks_and_spellcasting</label>
+</div>
+</div>
+<div class="input-field col s6">
+  <input type="text">
+  <label for="passive_wisdom">Passive_wisdom</label>
+</div>
+</div>
+<div class="input-field col s6">
+  <input type="text">
+  <label for="equipment">Equipment</label>
+</div>
+</div>
+<div class="input-field col s6">
+  <input type="text">
+  <label for="features_and_traits">Features_and_traits</label>
+</div>
+</div>
+<div class="input-field col s6">
+  <input type="text">
+  <label for="other_proficiences_and_languages">Other_proficiencies_and_languages</label>
+</div>
+</div>
+<div class="input-field col s6">
+  <input type="text">
+  <label for="age">Age</label>
+</div>
+</div>
+<div class="input-field col s6">
+  <input type="text">
+  <label for="height">Height</label>
+</div>
+</div>
+<div class="input-field col s6">
+  <input type="text">
+  <label for="weight">Weight</label>
+</div>
+</div>
+<div class="input-field col s6">
+  <input type="text">
+  <label for="eyes">Eyes</label>
+</div>
+</div>
+<div class="input-field col s6">
+  <input type="text">
+  <label for="skin">Skin</label>
+</div>
+</div>
+<div class="input-field col s6">
+  <input type="text">
+  <label for="hair">Hair</label>
+</div>
+</div>
+<div class="input-field col s6">
+  <input type="text">
+  <label for="acrobatics">Acrobatics</label>
+</div>
+</div>
+<div class="input-field col s6">
+  <input type="text">
+  <label for="animal_handling">Animal_handling</label>
+</div>
+</div>
+<div class="input-field col s6">
+  <input type="text">
+  <label for="arcana">Arcana</label>
+</div>
+</div>
+<div class="input-field col s6">
+  <input type="text">
+  <label for="athletics">Athletics</label>
+</div>
+</div>
+<div class="input-field col s6">
+  <input type="text">
+  <label for="deception">Deception</label>
+</div>
+</div>
+<div class="input-field col s6">
+  <input type="text">
+  <label for="history">History</label>
+</div>
+</div>
+<div class="input-field col s6">
+  <input type="text">
+  <label for="insight">Insight</label>
+</div>
+</div>
+<div class="input-field col s6">
+  <input type="text">
+  <label for="intimidation">Intimidation</label>
+</div>
+</div>
+<div class="input-field col s6">
+  <input type="text">
+  <label for="investigation">Investigation</label>
+</div>
+</div>
+<div class="input-field col s6">
+  <input type="text">
+  <label for="medicine">Medicine</label>
+</div>
+</div>
+<div class="input-field col s6">
+  <input type="text">
+  <label for="nature">Nature</label>
+</div>
+</div>
+<div class="input-field col s6">
+  <input type="text">
+  <label for="perception">Perception</label>
+</div>
+</div>
+<div class="input-field col s6">
+  <input type="text">
+  <label for="performance">Performance</label>
+</div>
+</div>
+<div class="input-field col s6">
+  <input type="text">
+  <label for="persuasion">Persuasion</label>
+</div>
+</div>
+<div class="input-field col s6">
+  <input type="text">
+  <label for="religion">Religion</label>
+</div>
+</div>
+<div class="input-field col s6">
+  <input type="text">
+  <label for="sleight_of_hand">Sleight_of_hand</label>
+</div>
+</div>
+<div class="input-field col s6">
+  <input type="text">
+  <label for="stealth">Stealth</label>
+</div>
+</div>
+<div class="input-field col s6">
+  <input type="text">
+  <label for="survival">Survival</label>
+</div>
+</div>
+
+
+
+</form>
+</div>
