--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,31 +4,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="../../public/css/style.css">
+    <title>home page</title>
+
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
+    <!--Import Google Icon Font-->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+    <link rel="stylesheet" href="../../../assets/css/style.css">
+
 </head>
 
 <body>
+    <!-- navbar -->
     <nav>
-        <div class="nav-wrapper">
-            <a href="../../public/assets/dndlogo.png" class="brand-logo center">Logo</a>
-            <ul class="left hide-on-med-and-down">
-                <li><a href="../home.handlebars">Home</a></li>
-                <li><a href="../characters.handlebars">Characters</a></li>
-                <li><a href="../dice.handlebars">Dice</a></li>
-                <li class="active"><a href="collapsible.html">JavaScript</a></li>
+        <div class="nav-wrapper black">
+            <a href="#"><img class="brand-logo" src="../../../assets/images/dndlogo.png" alt="" srcset=""></a>
+            <ul id="nav-mobile" class="right hide-on-med-and-down">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Characters</a></li>
+                <li><a href="#">Dice</a></li>
             </ul>
         </div>
     </nav>
-    <div class="container">
-        {{{body}}}
-    </div>
+
+    {{{body}}}
 
 </body>
 
