--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -31,8 +31,57 @@
             </ul>
         </div>
     </nav>
+    
 
     {{{body}}}
+
+    
+    <footer class="page-footer black">
+        <div class="container">
+            <div class="row">
+                <div class="col m6 s12">
+                    <h5 class="white-text">About Us</h5>
+                    <p class="grey-text text-lighten-4">We are a team of college students working on this project like
+                        it's our full time job. <br> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla in
+                        illo
+                        dolorum a dignissimos molestiae hic totam fuga voluptatem. Nisi nihil culpa autem consectetur
+                        ullam tenetur error eligendi mollitia accusantium.
+                    </p>
+                </div>
+                <div class="col m6 s12">
+                    <h5 class="white-text center">Meet The Engineers</h5>
+                    <br>
+                    <div class="row">
+                        <div class="col m3 s12">
+                            <a href="https://github.com/ariehh1"></a><img class="teammate" src="../../../assets/images/Iss.JPG" alt=""
+                                srcset=""></a>
+                            <p class="center">Ari Horowitz</p>
+                        </div>
+                        <div class="col m3 s12">
+                            <a href="https://github.com/Vaughnsmcp"></a><img class="teammate" src="../../../assets/images/Iss.JPG" alt=""
+                                srcset=""></a>
+                            <p class="center">Vaughn McPherson</p>
+                        </div>
+                        <div class="col m3 s12">
+                            <a href="https://github.com/FlashOTFR"></a><img class="teammate" src="../../../assets/images/Iss.JPG" alt=""
+                                srcset=""></a>
+                            <p class="center">Randy Burgess</p>
+                        </div>
+                        <div class="col m3 s12">
+                            <a href="https://github.com/Issouf03"></a><img class="teammate" src="../../../assets/images/Iss.JPG" alt=""
+                                srcset=""></a>
+                            <p class="center">Issouf Kiema</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="footer-copyright">
+            <div class="container">
+                <p class="white-text text-lighten-3 center">Copyright &copy; All Rights Reserved</p>
+            </div>
+        </div>
+    </footer>
 
 </body>
 
