--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,18 +1,57 @@
-<div class="row">
-    <div class="col s12 m6">
-        <div class="card #eeeeee grey lighten-3">
-            <div class="card-content white-text">
-                <span class="card-title">Description</span>
-                <p>I am a very simple card. I am good at containing small bits of information.
-                    I am convenient because I require little markup to use effectively.</p>
+    <!-- main Content -->
+    <div class="section no-pad-bot" id="index-banner">
+        <div class="container">
+            <h1 class="header center red-text">Welcome to D&amp;D Character App</h1>
+            <div class="row center">
+                <h5 class="header col s12 light">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut ipsa
+                    voluptatibus cupiditate amet ex molestias iure. Ipsum totam cumque ullam sapiente nihil sed nesciunt
+                    ex repellendus, consequuntur molestias voluptate dolor?</h5>
             </div>
         </div>
     </div>
-</div>
+    <div class="container">
+        <div class="section">
+            <!--   Icon Section   -->
+            <div class="row">
+                <div class="col s12 m6">
+                    <div class="icon-block">
+                        <h2 class="center light-blue-text"><i class="medium material-icons">remove_red_eye</i></h2>
+                        <h5 class="center">View All Characters</h5>
+                        <p class="center light">This page contains all the characters created by users.</p>
+                    </div>
+                    <div class="row center">
+                        <a href="#" id="download-button" class="btn-large waves-effect waves-light red">View</a>
+                    </div>
+                </div>
+                <div class="col s12 m6">
+                    <div class="icon-block">
+                        <h2 class="center light-blue-text"><i class="medium material-icons">add_circle_outline</i></h2>
+                        <h5 class="center">Create a Character</h5>
 
+                        <p class=" center light"> This page will let you create a character.</p>
+                    </div>
 
-<div class="row">
-    <div class="col s4">View</div>
-    <div class="col s4">make</div>
-    <div class="col s4">Roll</div>
-</div>
+                    <div class="row center">
+                        <a href="#" id="download-button" class="btn-large waves-effect waves-light red">Create</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col s12 m12">
+                    <div class="icon-block">
+                        <h2 class="center light-blue-text"><i class="medium material-icons">casino</i></h2>
+                        <h5 class="center">Roll a Dice</h5>
+
+                        <p class=" center light"> This page will let you roll dices and record the output.</p>
+                    </div>
+
+                    <div class="row center">
+                        <a href="#" id="download-button" class="btn-large waves-effect waves-light red">Roll it!</a>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+    </div>
