adding some css to the page

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,7 +15,7 @@
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-    <link rel="stylesheet" href="../../../assets/css/style.css">
+    <link rel="stylesheet" href="../../../css/style.css">
 
 </head>
 
@@ -35,7 +35,7 @@
 
     {{{body}}}
 
-    
+
     <footer class="page-footer black">
         <div class="container">
             <div class="row">
