--- a/views/addchar.handlebars
+++ b/views/addchar.handlebars
@@ -16,69 +16,240 @@
           </div>
           <div class="input-field col s12">
             <input type="text">
-            <label for="class">Class</label>
+            <label for="level">Level</label>
           </div>
           <div class="input-field col s12">
             <input type="text">
-            <label for="class">Class</label>
+            <label for="background">Background</label>
           </div>
           <div class="input-field col s12">
             <input type="text">
-            <label for="class">Class</label>
+            <label for="player_name">Player_name</label>
           </div>
           <div class="input-field col s12">
             <input type="text">
-            <label for="class">Class</label>
+            <label for="faction">Faction</label>
           </div>
           <div class="input-field col s12">
             <input type="text">
-            <label for="class">Class</label>
+            <label for="race">Race</label>
           </div>
           <div class="input-field col s12">
             <input type="text">
-            <label for="class">Class</label>
+            <label for="alignment">Alignment</label>
           </div>
           <div class="input-field col s12">
             <input type="text">
-            <label for="class">Class</label>
+            <label for="exp">Exp</label>
           </div>
           <div class="input-field col s12">
             <input type="text">
-            <label for="class">Class</label>
+            <label for="inspiration">Inspiration</label>
           </div>
           <div class="input-field col s12">
             <input type="text">
-            <label for="class">Class</label>
+            <label for="strength">Strength</label>
           </div>
           <div class="input-field col s12">
             <input type="text">
-            <label for="class">Class</label>
+            <label for="dexterity">Dexterity</label>
           </div>
           <div class="input-field col s12">
             <input type="text">
-            <label for="class">Class</label>
+            <label for="constitution">Constitution</label>
           </div>
           <div class="input-field col s12">
             <input type="text">
-            <label for="class">Class</label>
+            <label for="intelligence">Intelligence</label>
           </div>
-
-
-
-
-
-
-
-
-
-
-
-
+          <div class="input-field col s12">
+            <input type="text">
+            <label for="wisdom">Wisdom</label>
+          </div>
+          <div class="input-field col s12">
+            <input type="text">
+            <label for="charisma">Charisma</label>
+          </div>
+          <div class="input-field col s12">
+            <input type="text">
+            <label for="strength_st">Strength_st</label>
+          </div>
+          <div class="input-field col s12">
+            <input type="text">
+            <label for="dexterity_st">Dexterity_st</label>
+          </div>
+          <div class="input-field col s12">
+            <input type="text">
+            <label for="constitution_st">Constitution_st</label>
+          </div>
+          <div class="input-field col s12">
+            <input type="text">
+            <label for="intelligence_st">Intelligence_st</label>
+          </div>
+          <div class="input-field col s12">
+            <input type="text">
+            <label for="wisdom_st">Wisdom_st</label>
+          </div>
+          <div class="input-field col s12">
+            <input type="text">
+            <label for="charisma_st">Charisma_st</label>
+          </div>
+          <div class="input-field col s12">
+            <input type="text">
+            <label for="armor_class">Armor_class</label>
+          </div>
+          <div class="input-field col s12">
+            <input type="text">
+            <label for="initiative">Inititative</label>
+          </div>
+          <div class="input-field col s12">
+            <input type="text">
+            <label for="speed">Speed</label>
+          </div>
+          <div class="input-field col s12">
+            <input type="text">
+            <label for="current_hp">Current_hp</label>
+          </div>
+          <div class="input-field col s12">
+            <input type="text">
+            <label for="temp_hp">Temp_hp</label>
+          </div>
+          <div class="input-field col s12">
+            <input type="text">
+            <label for="personality_traits">Personality_traits</label>
+          </div>
+          <div class="input-field col s12">
+            <input type="text">
+            <label for="ideals">Ideals</label>
+          </div>
+          <div class="input-field col s12">
+            <input type="text">
+            <label for="bonds">Bonds</label>
+          </div>
+          <div class="input-field col s12">
+            <input type="text">
+            <label for="flaws">Flaws</label>
+          </div>
+          <div class="input-field col s12">
+            <input type="text">
+            <label for="attacks_and_spellcasting">Attacks_and_spellcasting</label>
+          </div>
+          <div class="input-field col s12">
+            <input type="text">
+            <label for="passive_wisdom">Passive_wisdom</label>
+          </div>
+          <div class="input-field col s12">
+            <input type="text">
+            <label for="equipment">Equipment</label>
+          </div>
+          <div class="input-field col s12">
+            <input type="text">
+            <label for="features_and_traits">Features_and_traits</label>
+          </div>
+          <div class="input-field col s12">
+            <input type="text">
+            <label for="other_proficiences_and_languages">Other_proficiencies_and_languages</label>
+          </div>
+          <div class="input-field col s12">
+            <input type="text">
+            <label for="age">Age</label>
+          </div>
+          <div class="input-field col s12">
+            <input type="text">
+            <label for="height">Height</label>
+          </div>
+          <div class="input-field col s12">
+            <input type="text">
+            <label for="weight">Weight</label>
+          </div>
+          <div class="input-field col s12">
+            <input type="text">
+            <label for="eyes">Eyes</label>
+          </div>
+          <div class="input-field col s12">
+            <input type="text">
+            <label for="skin">Skin</label>
+          </div>
+          <div class="input-field col s12">
+            <input type="text">
+            <label for="hair">Hair</label>
+          </div>
+          <div class="input-field col s12">
+            <input type="text">
+            <label for="acrobatics">Acrobatics</label>
+          </div>
+          <div class="input-field col s12">
+            <input type="text">
+            <label for="animal_handling">Animal_handling</label>
+          </div>
+          <div class="input-field col s12">
+            <input type="text">
+            <label for="arcana">Arcana</label>
+          </div>
+          <div class="input-field col s12">
+            <input type="text">
+            <label for="athletics">Athletics</label>
+          </div>
+          <div class="input-field col s12">
+            <input type="text">
+            <label for="deception">Deception</label>
+          </div>
+          <div class="input-field col s12">
+            <input type="text">
+            <label for="history">History</label>
+          </div>
+          <div class="input-field col s12">
+            <input type="text">
+            <label for="insight">Insight</label>
+          </div>
+          <div class="input-field col s12">
+            <input type="text">
+            <label for="intimidation">Intimidation</label>
+          </div>
+          <div class="input-field col s12">
+            <input type="text">
+            <label for="investigation">Investigation</label>
+          </div>
+          <div class="input-field col s12">
+            <input type="text">
+            <label for="medicine">Medicine</label>
+          </div>
+          <div class="input-field col s12">
+            <input type="text">
+            <label for="nature">Nature</label>
+          </div>
+          <div class="input-field col s12">
+            <input type="text">
+            <label for="perception">Perception</label>
+          </div>
+          <div class="input-field col s12">
+            <input type="text">
+            <label for="performance">Performance</label>
+          </div>
+          <div class="input-field col s12">
+            <input type="text">
+            <label for="persuasion">Persuasion</label>
+          </div>
+          <div class="input-field col s12">
+            <input type="text">
+            <label for="religion">Religion</label>
+          </div>
+          <div class="input-field col s12">
+            <input type="text">
+            <label for="sleight_of_hand">Sleight_of_hand</label>
+          </div>
+          <div class="input-field col s12">
+            <input type="text">
+            <label for="stealth">Stealth</label>
+          </div>
+          <div class="input-field col s12">
+            <input type="text">
+            <label for="survival">Survival</label>
+          </div>
         </div>
       </div>
       <div class="card-action right-align">
-        <input type="reset" id="reset" class="btn-flat grey-text waves-effect">
-        <input type="submit" class="btn green waves-effect waves-light" value="Login">
+        <input type="submit" class="btn green waves-effect waves-light" value="Create">
       </div>
     </form>
   </div>
