buttons are functioning in home.handlebars

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,57 +1,57 @@
-    <!-- main Content -->
-    <div class="section no-pad-bot" id="index-banner">
-        <div class="container">
-            <h1 class="header center red-text">Welcome to D&amp;D Character App</h1>
-            <div class="row center">
-                <h5 class="header col s12 light">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut ipsa
-                    voluptatibus cupiditate amet ex molestias iure. Ipsum totam cumque ullam sapiente nihil sed nesciunt
-                    ex repellendus, consequuntur molestias voluptate dolor?</h5>
-            </div>
-        </div>
-    </div>
+<!-- main Content -->
+<div class="section no-pad-bot" id="index-banner">
     <div class="container">
-        <div class="section">
-            <!--   Icon Section   -->
-            <div class="row">
-                <div class="col s12 m6">
-                    <div class="icon-block">
-                        <h2 class="center light-blue-text"><i class="medium material-icons">remove_red_eye</i></h2>
-                        <h5 class="center">View All Characters</h5>
-                        <p class="center light">This page contains all the characters created by users.</p>
-                    </div>
-                    <div class="row center">
-                        <a href="#" id="download-button" class="btn-large waves-effect waves-light red">View</a>
-                    </div>
+        <h1 class="header center red-text">Welcome to D&amp;D Character App</h1>
+        <div class="row center">
+            <h5 class="header col s12 light">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut ipsa
+                voluptatibus cupiditate amet ex molestias iure. Ipsum totam cumque ullam sapiente nihil sed nesciunt
+                ex repellendus, consequuntur molestias voluptate dolor?</h5>
+        </div>
+    </div>
+</div>
+<div class="container">
+    <div class="section">
+        <!--   Icon Section   -->
+        <div class="row">
+            <div class="col s12 m6">
+                <div class="icon-block">
+                    <h2 class="center light-blue-text"><i class="medium material-icons">remove_red_eye</i></h2>
+                    <h5 class="center">View All Characters</h5>
+                    <p class="center light">This page contains all the characters created by users.</p>
                 </div>
-                <div class="col s12 m6">
-                    <div class="icon-block">
-                        <h2 class="center light-blue-text"><i class="medium material-icons">add_circle_outline</i></h2>
-                        <h5 class="center">Create a Character</h5>
-
-                        <p class=" center light"> This page will let you create a character.</p>
-                    </div>
-
-                    <div class="row center">
-                        <a href="#" id="download-button" class="btn-large waves-effect waves-light red">Create</a>
-                    </div>
+                <div class="row center">
+                    <a href="/characters" id="download-button" class="btn-large waves-effect waves-light red">View</a>
                 </div>
             </div>
+            <div class="col s12 m6">
+                <div class="icon-block">
+                    <h2 class="center light-blue-text"><i class="medium material-icons">add_circle_outline</i></h2>
+                    <h5 class="center">Create a Character</h5>
 
-            <div class="row">
-                <div class="col s12 m12">
-                    <div class="icon-block">
-                        <h2 class="center light-blue-text"><i class="medium material-icons">casino</i></h2>
-                        <h5 class="center">Roll a Dice</h5>
+                    <p class=" center light"> This page will let you create a character.</p>
+                </div>
 
-                        <p class=" center light"> This page will let you roll dices and record the output.</p>
-                    </div>
-
-                    <div class="row center">
-                        <a href="#" id="download-button" class="btn-large waves-effect waves-light red">Roll it!</a>
-                    </div>
+                <div class="row center">
+                    <a href="/addchar" id="download-button" class="btn-large waves-effect waves-light red">Create</a>
                 </div>
             </div>
+        </div>
 
+        <div class="row">
+            <div class="col s12 m12">
+                <div class="icon-block">
+                    <h2 class="center light-blue-text"><i class="medium material-icons">casino</i></h2>
+                    <h5 class="center">Roll a Dice</h5>
+
+                    <p class=" center light"> This page will let you roll dices and record the output.</p>
+                </div>
+
+                <div class="row center">
+                    <a href="/dice" id="download-button" class="btn-large waves-effect waves-light red">Roll it!</a>
+                </div>
+            </div>
         </div>
 
     </div>
+
+</div>
