--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -25,13 +25,13 @@
         <div class="nav-wrapper black">
             <a href="#"><img class="brand-logo" src="../../../assets/images/dndlogo.png" alt="" srcset=""></a>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Characters</a></li>
-                <li><a href="#">Dice</a></li>
+                <li><a href="/">Home</a></li>
+                <li><a href="/characters">Characters</a></li>
+                <li><a href="/dice">Dice</a></li>
             </ul>
         </div>
     </nav>
-    
+
 
     {{{body}}}
 
@@ -53,23 +53,23 @@
                     <br>
                     <div class="row">
                         <div class="col m3 s12">
-                            <a href="https://github.com/ariehh1"></a><img class="teammate" src="../../../assets/images/Iss.JPG" alt=""
-                                srcset=""></a>
+                            <a href="https://github.com/ariehh1"></a><img class="teammate"
+                                src="../../../assets/images/Iss.JPG" alt="" srcset=""></a>
                             <p class="center">Ari Horowitz</p>
                         </div>
                         <div class="col m3 s12">
-                            <a href="https://github.com/Vaughnsmcp"></a><img class="teammate" src="../../../assets/images/Iss.JPG" alt=""
-                                srcset=""></a>
+                            <a href="https://github.com/Vaughnsmcp"></a><img class="teammate"
+                                src="../../../assets/images/Iss.JPG" alt="" srcset=""></a>
                             <p class="center">Vaughn McPherson</p>
                         </div>
                         <div class="col m3 s12">
-                            <a href="https://github.com/FlashOTFR"></a><img class="teammate" src="../../../assets/images/Iss.JPG" alt=""
-                                srcset=""></a>
+                            <a href="https://github.com/FlashOTFR"></a><img class="teammate"
+                                src="../../../assets/images/Iss.JPG" alt="" srcset=""></a>
                             <p class="center">Randy Burgess</p>
                         </div>
                         <div class="col m3 s12">
-                            <a href="https://github.com/Issouf03"></a><img class="teammate" src="../../../assets/images/Iss.JPG" alt=""
-                                srcset=""></a>
+                            <a href="https://github.com/Issouf03"></a><img class="teammate"
+                                src="../../../assets/images/Iss.JPG" alt="" srcset=""></a>
                             <p class="center">Issouf Kiema</p>
                         </div>
                     </div>
