--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -23,7 +23,7 @@
     <!-- navbar -->
     <nav>
         <div class="nav-wrapper black">
-            <a href="#"><img class="brand-logo" src="../../../assets/images/dndlogo.png" alt="" srcset=""></a>
+            <a href="/"><img class="brand-logo" src="../../../assets/images/dndlogo.png" alt="" srcset=""></a>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
                 <li><a href="/">Home</a></li>
                 <li><a href="/characters">Characters</a></li>
@@ -54,7 +54,7 @@
                     <div class="row">
                         <div class="col m3 s12">
                             <a href="https://github.com/ariehh1"></a><img class="teammate"
-                                src="../../../assets/images/Iss.JPG" alt="" srcset=""></a>
+                                src="../../../assets/images/Ari.jpeg" alt="" srcset=""></a>
                             <p class="center">Ari Horowitz</p>
                         </div>
                         <div class="col m3 s12">
