--- a/views/characters.handlebars
+++ b/views/characters.handlebars
@@ -1,14 +1,19 @@
 <section id="characters" class="container">
     <h1>All Characters</h1>
 
-    {{#each dbcharacters}}
-      <div class="character">
-      <h3>{{name}}</h3>
-      <p>{{class}}</p>
-      <ul>
-        <li>Level: {{level}}</li>
-        <li>{{current_hp}}</li>
-      </ul>
+    {{#each characters}}
+        <div class="row">
+    <div class="col s12 m6">
+      <div class="card blue-grey darken-1">
+        <div class="card-content white-text">
+          <span class="card-title">{{this.name}}</span>
+          <p>Class: {{this.class}} <br />Level: {{this.level}} <br /> Current HP: {{current_hp}}</p>
+        </div>
+        <div class="card-action">
+<a class="waves-effect waves-light btn-large">View Character</a>
+        </div>
+      </div>
+    </div>
     {{else}}
       <p>No characters available</p>
     {{/each}}
