fixed issues with handlebars not destructuring objects.  set up and stylized characters.handlebars.  fixed issue with being able to add dummy info into db.

--- a/views/characters.handlebars
+++ b/views/characters.handlebars
@@ -11,6 +11,7 @@
         </div>
         <div class="card-action">
 <a class="waves-effect waves-light btn-large">View Character</a>
+<a class="waves-effect waves-light btn-large">Delete Character</a>
         </div>
       </div>
     </div>
