updates to main.html and code comment clean up

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,23 +1,24 @@
-<!-- main Content -->
+{{!-- Main Content --}}
 <div class="section no-pad-bot" id="index-banner">
     <div class="container">
-        <h1 class="header center red-text">Welcome to D&amp;D Character App</h1>
+        <h1 class="header center red-text">Welcome to the D&amp;D Character App</h1>
         <div class="row center">
-            <h5 class="header col s12 light">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut ipsa
-                voluptatibus cupiditate amet ex molestias iure. Ipsum totam cumque ullam sapiente nihil sed nesciunt
-                ex repellendus, consequuntur molestias voluptate dolor?</h5>
+            <h5 class="header col s12 light">Dungeons & Dragons (also abbreviated as D&D or DnD) is a fantasy tabletop
+                role-playing game that was first published in 1974. This application simulates the character generated
+                portions of the game. Simply view all of your created characters, create a new character, and roll the
+                dice!</h5>
         </div>
     </div>
 </div>
 <div class="container">
     <div class="section">
-        <!--   Icon Section   -->
+        {{!-- Icon Section --}}
         <div class="row">
             <div class="col s12 m6">
                 <div class="icon-block">
                     <h2 class="center light-blue-text"><i class="medium material-icons">remove_red_eye</i></h2>
                     <h5 class="center">View All Characters</h5>
-                    <p class="center light">This page contains all the characters created by users.</p>
+                    <p class="center light">This page contains all characters created by the user</p>
                 </div>
                 <div class="row center">
                     <a href="/characters" id="download-button" class="btn-large waves-effect waves-light red">View</a>
@@ -27,10 +28,8 @@
                 <div class="icon-block">
                     <h2 class="center light-blue-text"><i class="medium material-icons">add_circle_outline</i></h2>
                     <h5 class="center">Create a Character</h5>
-
-                    <p class=" center light"> This page will let you create a character.</p>
+                    <p class="center light">This page will let you create a brand new character</p>
                 </div>
-
                 <div class="row center">
                     <a href="/addchar" id="download-button" class="btn-large waves-effect waves-light red">Create</a>
                 </div>
@@ -43,7 +42,7 @@
                     <h2 class="center light-blue-text"><i class="medium material-icons">casino</i></h2>
                     <h5 class="center">Roll a Dice</h5>
 
-                    <p class=" center light"> This page will let you roll dices and record the output.</p>
+                    <p class=" center light">This page will allow you to roll the dice and record the output</p>
                 </div>
 
                 <div class="row center">
