--- a/views/addchar.handlebars
+++ b/views/addchar.handlebars
@@ -1,4 +1,4 @@
-{{!-- GENERIC FORM, EDIT TO OUR NEEDS --}}
+<!--GENERIC FORM, EDIT TO OUR NEEDS-->
 
 <div class="valign-wrapper row login-box">
   <div class="col card hoverable s10 pull-s1 m6 pull-m3 l4 pull-l4">
