--- a/views/characters.handlebars
+++ b/views/characters.handlebars
@@ -1,22 +1,22 @@
 <section id="characters" class="container">
-  <h1 class="center">All Characters</h1>
+    <h1>All Characters</h1>
 
-  {{#each characters}}
-  <div class="row">
-    <div class="col s12 m12">
-      <div class="card light-blue">
+    {{#each characters}}
+        <div class="row">
+    <div class="col s12 m6">
+      <div class="card blue-grey darken-1">
         <div class="card-content white-text">
-          <span class="card-title center">{{this.name}}</span>
-          <p>Class: {{this.class}} <br/>Level: {{this.level}} <br/> Current HP: {{current_hp}}</p>
+          <span class="card-title">{{this.name}}</span>
+          <p>Class: {{this.class}} <br />Level: {{this.level}} <br /> Current HP: {{current_hp}}</p>
         </div>
         <div class="card-action">
-          <a class="waves-effect waves-light btn-small left">More Infos </a>
-          <button class="waves-effect waves-light btn-small right" id="delBtn" data-id="{{this.id}}">Delete Character</button>
+<a class="waves-effect waves-light btn-large">View Character</a>
+<a class="waves-effect waves-light btn-large">Delete Character</a>
         </div>
       </div>
     </div>
     {{else}}
-    <p>No characters available</p>
+      <p>No characters available</p>
     {{/each}}
-
-</section>
+    
+  </section>
