--- a/views/characters.handlebars
+++ b/views/characters.handlebars
@@ -11,7 +11,7 @@
         </div>
         <div class="card-action">
           <a class="waves-effect waves-light btn-small left">More Infos </a>
-          <button class="waves-effect waves-light btn-small right" id="delBtn" data-id="{{this.id}}">Delete Character</button>
+          <button class="waves-effect waves-light btn-small right delBtn" data-id="{{this.id}}">Delete Character</button>
         </div>
       </div>
     </div>
