Changed front end to have create button instead of dice button in the navbar.  fixed issues with add character, can now add new characters to DB and they show up on characters page.

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -35,7 +35,7 @@
             <ul id="nav-mobile" class="right hide-on-med-and-down">
                 <li><a href="/">Home</a></li>
                 <li><a href="/characters">Characters</a></li>
-                <li><a href="/dice">Dice</a></li>
+                <li><a href="/addchar">Create</a></li>
             </ul>
         </div>
     </nav>
