Github links styled above picture

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,7 +15,7 @@
 
     {{!-- Compiled and minified JavaScript --}}
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    
+
     <script src="https://code.jquery.com/jquery.js"></script>
 
     <script src="js/controller.js"></script>
@@ -60,24 +60,20 @@
                     <br>
                     <div class="row">
                         <div class="col m3 s12">
-                            <a href="https://github.com/ariehh1"></a><img class="teammate"
+                            <a href="https://github.com/ariehh1">Ari <br> Horowitz</a><img class="teammate"
                                 src="../../../assets/images/Ari.jpeg" alt="Ari" srcset=""></a>
-                            <p class="center">Ari Horowitz</p>
                         </div>
                         <div class="col m3 s12">
-                            <a href="https://github.com/Vaughnsmcp"></a><img class="teammate"
-                                src="../../../assets/images/Iss.JPG" alt="" srcset=""></a>
-                            <p class="center">Vaughn McPherson</p>
+                            <a href="https://github.com/Vaughnsmcp">Vaughn McPherson</a><img class="teammate"
+                                src="../../../assets/images/Vaughn.jpeg" alt="" srcset=""></a>
                         </div>
                         <div class="col m3 s12">
-                            <a href="https://github.com/FlashOTFR"></a><img class="teammate"
+                            <a href="https://github.com/FlashOTFR">Randy Burgess</a><img class="teammate"
                                 src="../../../assets/images/Iss.JPG" alt="" srcset=""></a>
-                            <p class="center">Randy Burgess</p>
                         </div>
                         <div class="col m3 s12">
-                            <a href="https://github.com/Issouf03"></a><img class="teammate"
+                            <a href="https://github.com/Issouf03">Issouf <br> Kiema</a><img class="teammate"
                                 src="../../../assets/images/Iss.JPG" alt="" srcset=""></a>
-                            <p class="center">Issouf Kiema</p>
                         </div>
                     </div>
                 </div>
